# advent-of-code-2025

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
cmake/: CPM.cmake
cmake/Modules/: FindGMP.cmake  FindMPFR.cmake
d01/: CMakeLists.txt  main01p1.cpp  main01p2.cpp
d02/: CMakeLists.txt  main02p1.cpp  main02p2.cpp
d03/: CMakeLists.txt  main03p1.cpp  main03p2.cpp
d04/: CMakeLists.txt  main04p1.cpp  main04p2.cpp
d05/: CMakeLists.txt  lib06.hpp  main05p1.cpp  main05p2.cpp
d06/: CMakeLists.txt  main06p1.cpp  main06p2.cpp
d07/: CMakeLists.txt  main07p1.cpp  main07p2.cpp
d08/: CMakeLists.txt  lib08.hpp  main08p1.cpp  main08p2.cpp
d09/: CMakeLists.txt  main09p1.cpp  main09p2.cpp
d10/: CMakeLists.txt  main10p1.cpp  main10p2.cpp  model.hpp
d11/: CMakeLists.txt  main11p1.cpp  main11p2.cpp  model.h
d12/: CMakeLists.txt  main12p1.cpp  model.h  model.hpp
util/: CMakeLists.txt  vec.hpp
